--- a/index.html
+++ b/index.html
@@ -538,7 +538,7 @@
           class="w-4 h-4 rounded-full border-[3px] border-[#ffe578] absolute left-1/2 -translate-x-1/2 bg-[#111] z-10 hover:scale-110 ease-in-out duration-100 hidden sm:block"
         ></div>
         <a
-          href="https://github.com/JitendraSrivastava12/TechJet"
+          href="https://jazzy-strudel-373bfd.netlify.app/"
           class="order-1 sm:order-2 flex w-full relative justify-center sm:justify-start"
         >
           <div
@@ -584,7 +584,7 @@
           class="w-4 h-4 rounded-full border-[3px] border-[#fc815c] absolute left-1/2 -translate-x-1/2 bg-[#111] z-10 hover:scale-110 ease-in-out duration-100 hidden sm:block"
         ></div>
         <a
-          href="https://cloth-store-beige.vercel.app/"
+          href="https://jazzy-strudel-373bfd.netlify.app/"
           class="flex w-full relative justify-center sm:justify-start"
         >
           <div
